[package]
name = "event-add"
version = "0.1.0"
edition = "2021"
authors = ["T Kumagai <s8zmnonun@relay.firefox.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = { version = "2.0.2" }
tokio = { version = "1.14.0", features = ["full"] }
tokio-stream = "0.1.8"
chrono = "0.4.19"
#async-std = { version = "1.7.0", features = ["attributes"]}
serde_json = "1.0.72"
bson = "2.0.1"
serde = { version = "1.0", features = ["derive"] }
# In Cargo.toml, add the following dependency.
futures = "0.3"
toml = "0.5"
